# cvmanova_python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: migration_guide.md
examples/: 01_basic_searchlight.py  02_region_analysis.py  03_nilearn_integration.py  04_complete_workflow.py
tests/: __init__.py  haxby_setup.py
