[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvmanova"
version = "4.0.0"
description = "Cross-validated MANOVA for fMRI data analysis"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Carsten Allefeld", email = "carsten.allefeld@gmail.com"},
    {name = "Johannes Roth", email = "johannes@roth24.de"}
]
maintainers = [
    {name = "Johannes Roth", email = "johannes@roth24.de"}
]
keywords = [
    "fMRI",
    "MVPA",
    "multivariate pattern analysis",
    "MANOVA",
    "searchlight",
    "neuroimaging",
    "cross-validation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "nibabel>=3.0.0",
    "joblib>=1.0.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
test = [
    "pytest>=7.0.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/andropar/cvmanova_python"
Documentation = "https://github.com/andropar/cvmanova_python"
Repository = "https://github.com/andropar/cvmanova_python"
Issues = "https://github.com/andropar/cvmanova_python/issues"
"Original MATLAB implementation" = "https://github.com/allefeld/cvmanova"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
